[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/icons/random.png" type="Texture" id=2]
[ext_resource path="res://menu/editor/ui/assets/board.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/hill_tile.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/land_tile.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/card.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/water_tile.png" type="Texture" id=7]
[ext_resource path="res://menu/editor/ui/tile_option/tile_option.gd" type="Script" id=8]

[node name="tile_option" type="MarginContainer"]
margin_top = 312.0
margin_right = 92.0
margin_bottom = 712.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 400.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 0
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 34.0
margin_right = 92.0
margin_bottom = 366.0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 8.0
margin_bottom = 332.0
rect_min_size = Vector2( 8, 0 )

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 12.0
margin_right = 92.0
margin_bottom = 332.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="btn_tile_random" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 1 )
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/VBoxContainer3/btn_tile_random"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="btn_tile_land" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3/btn_tile_land"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="btn_tile_hill" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer3/btn_tile_hill"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="btn_tile_water" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_top = 252.0
margin_right = 80.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/VBoxContainer3/btn_tile_water"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer3/btn_tile_random" to="." method="_on_btn_tile_random_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/btn_tile_land" to="." method="_on_btn_tile_land_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/btn_tile_hill" to="." method="_on_btn_tile_hill_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/btn_tile_water" to="." method="_on_btn_tile_water_pressed"]
